--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -74,4 +74,5 @@
   <string id="30219">Loading Profile</string>
   <string id="30220">Complete</string>
   <string id="30221">Add Chrome Extension to install of chrome</string>
+  <string id="30222">Send Bug Reports</string>
 </strings>
